@@ -293,6 +293,7 @@ int KsmZoneCountInit(DB_RESULT* handle, int id);
 int KsmZoneIdFromName(const char* zone_name, int* zone_id);
 int KsmZoneIdAndPolicyFromName(const char* zone_name, int* policy_id, int* zone_id);
 int KsmDeleteZone(int zone_id);
+int KsmZoneNameFromId(int zone_id, char** zone_name);
 
 #define UNSIGNED 0
 #define SIGNED 1
