@@ -3,6 +3,7 @@ $Id$
 OpenDNSSEC trunk
 
 * warn (by sending a message to the log) about impending key rollover
+* add export of DNSKEY and DS records to ksmutil
 
 
 OpenDNSSEC 1.0a3 - 2009-08-26
